@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$Id: dump.8.in,v 1.59 2006/08/01 10:22:44 stelian Exp $
+.\"	$Id: dump.8.in,v 1.60 2008/09/04 19:21:07 stelian Exp $
 .\"
 .TH DUMP 8 "version __VERSION__ of __DATE__" BSD "System management commands"
 .SH NAME
@@ -521,8 +521,8 @@ Always start with a level 0 backup, for example:
 This should be done at set intervals, say once a month or once every two months,
 and on a set of fresh tapes that is saved forever.
 .IP \(em
-After a level 0, dumps of active file systems are taken on a daily basis, using
-a modified Tower of Hanoi algorithm, with this sequence of dump levels:
+After a level 0, dumps of active file systems are taken on a daily basis,
+with this sequence of dump levels:
 .RS 14
 .B 3 2 5 4 7 6 9 8 9 9 ...
 .RE
@@ -534,6 +534,12 @@ set of tapes per dumped file system is used, also on a cyclical basis.
 .PP
 After several months or so, the daily and weekly tapes should get rotated out
 of the dump cycle and fresh tapes brought in.
+.PP
+Another backup strategy is the Tower of Hanoi sequence, which reuses
+older tapes in a way that for newer dates the available restore points
+are more frequent, then for older dates (see
+http://en.wikipedia.org/wiki/Backup_rotation_scheme for additional
+information).
 .PP
 (The 4.3BSD option syntax is implemented for backward compatibility but is not
 documented here.)
